[project]
name = "qetwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sriramsusc", email = "srirams@usc.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.5.1",
]

[project.scripts]
qetwork = "qetwork:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
